# soup-metadata

./: .gitignore  README.md  config.yaml.example  example_config.yaml  pyproject.toml
chaplib/: config.py  data.py  fetch.py  parse.py
data/patreon/: chapters.csv  deadlines.csv  events.csv  initial.csv  timeline.csv
data/royalroad/: chapters.csv  initial.csv
data/temp/: intermediary.csv
scripts/: intermediary.py  parse_pdf.py  plot_patreon.py  plot_royalroad_wc.py  plot_timeline.py  run.sh  update_patreon.py  update_royalroad.py
