[tool.poetry]
name = "my_local_lib"
version = "0.1.0"
description = "My local library"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "chaplib" },
]

[project]
name = "sleyca-data"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pytz (>=2026.1.post1,<2027.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pdfplumber (>=0.11.10,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
